[레거시 코드 리팩터링 2단계] 제나(위예나) 미션 제출합니다 (#633)
* docs: 2단계 요구사항 업데이트

* refactor: ProductRepository 사용으로 변경

* refactor: MenuGroupRepository 사용으로 변경

* refactor: MenuRepository, MenuProductRepository 생성

* refactor: OrderRepository, OrderLineItemRepository 생성

* refactor: TableService JPA 사용으로 변경

* refactor: TableGroupService JPA 사용으로 변경

* refactor: Dao 삭제

* refactor: Product 한테 가격 유효 검사 책임 위임. 안쓰는 setter 삭제

* refactor: request package 객체들에 final 키워드 추가

* refactor: MenuService 메서드 책임 객체로 위임

* refactor: TableService 메서드 책임 객체에 위임

* refactor: Service 에 @Transactional 달아줌

* refactor: TableGroupService 책임 분리

* refactor: OrderService 책임 분리

* refactor: Menu, MenuProduct 연관관계 편의메서드 수정

* refactor: Product 생성 시 price 검증 로직 product 에서 하게 수정

* refactor: final 키워드 통일을 위해 키워드 삭제

* refactor: entity 기본 생성자 protected 로 변경

* refactor: 메뉴 상품의 가격 합보다 메뉴 가격이 더 비싸면 예외 터지도록 변경

* refactor: private 메서드 호출 순서 변경

* refactor: OrderTables embedded 로 변경 및 TableGroupService 책임 분리

* fix: Product <-> MenuProduct 를 1:N 으로 변경

* refactor: MenuProducts @embeddable 사용 및 casecade, orphanRemoval 조건 추가

* refactor: OrderLineItem 에 cascade 및 orphanRemoval 옵션 추가