@@ -1,16 +1,19 @@
 package kitchenpos.application;
 
-import kitchenpos.dao.OrderDao;
 import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.repository.OrderRepository;
+import kitchenpos.ui.request.TableCreateRequest;
+import kitchenpos.ui.request.TableEmptyUpdateRequest;
+import kitchenpos.ui.request.TableGuestUpdateRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -23,15 +26,18 @@ class TableServiceTest {
     private TableService tableService;
 
     @Autowired
-    private OrderDao orderDao;
+    private OrderRepository orderRepository;
 
     @Test
     void 주문_테이블을_생성한다() {
         // given
-        OrderTable orderTable = new OrderTable(3, true);
+        OrderTable orderTable = new OrderTable(null, 3, true);
+        TableCreateRequest tableCreateRequest =
+                new TableCreateRequest(3, true);
+
 
         // when
-        OrderTable createdOrderTable = tableService.create(orderTable);
+        OrderTable createdOrderTable = tableService.create(tableCreateRequest);
 
         // then
         assertThat(createdOrderTable).usingRecursiveComparison()
@@ -41,53 +47,53 @@ class TableServiceTest {
     @Test
     void 주문_테이블_리스트를_조회한다() {
         // given
-        OrderTable orderTable = new OrderTable(3, true);
-        tableService.create(orderTable);
+        OrderTable orderTable = new OrderTable(null, 3, true);
+        TableCreateRequest tableCreateRequest =
+                new TableCreateRequest(3, true);
+        tableService.create(tableCreateRequest);
 
         // when
         List<OrderTable> orderTables = tableService.list();
 
         // then
         assertThat(orderTables).usingRecursiveComparison()
-                .ignoringFields("id", "tableGroupId")
-                .isEqualTo(List.of(new OrderTable(0, true), orderTable));
+                .ignoringFields("id", "tableGroup")
+                .isEqualTo(List.of(new OrderTable(null, 0, true), orderTable));
     }
 
     @Test
     void 주문_테이블의_empty_상태를_변경한다() {
         // given
-        OrderTable orderTable = tableService.create(new OrderTable(3, true));
-
-        orderDao.save(new Order(null, orderTable.getId(), OrderStatus.COMPLETION.name(), LocalDateTime.now(), List.of(new OrderLineItem())));
+        OrderTable orderTable = tableService.create(new TableCreateRequest(3, true));
 
         // when
-        OrderTable changedOrderTable = tableService.changeEmpty(orderTable.getId(), new OrderTable(false));
+        OrderTable changedOrderTable = tableService.changeEmpty(orderTable.getId(), new TableEmptyUpdateRequest(false));
 
         // then
         assertThat(changedOrderTable.isEmpty()).isFalse();
     }
 
     @ParameterizedTest
-    @ValueSource(strings = {"MEAL", "COOKING"})
-    void 주문_테이블의_주문_상태가_MEAL_이나_COOKING이면_empty_상태_변경_요청시_예외_발생(String status) {
+    @EnumSource(value = OrderStatus.class, names = {"MEAL", "COOKING"})
+    void 주문_테이블의_주문_상태가_MEAL_이나_COOKING이면_empty_상태_변경_요청시_예외_발생(OrderStatus status) {
         // given
-        OrderTable orderTable = tableService.create(new OrderTable(3, true));
+        OrderTable orderTable = tableService.create(new TableCreateRequest(3, true));
 
-        orderDao.save(new Order(null, orderTable.getId(), status, LocalDateTime.now(), List.of(new OrderLineItem())));
+        orderRepository.save(new Order(null, orderTable, status, LocalDateTime.now(), Collections.emptyList()));
 
         // when, then
-        assertThatThrownBy(() -> tableService.changeEmpty(orderTable.getId(), new OrderTable(false)))
+        assertThatThrownBy(() -> tableService.changeEmpty(orderTable.getId(), new TableEmptyUpdateRequest(false)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     void 주문_테이블의_게스트_인원_수를_변경한다() {
         // given
-        OrderTable orderTable = tableService.create(new OrderTable(3, false));
+        OrderTable orderTable = tableService.create(new TableCreateRequest(3, false));
 
         // when
         OrderTable changedOrderTable = tableService.changeNumberOfGuests(orderTable.getId(),
-                new OrderTable(10, orderTable.isEmpty()));
+                new TableGuestUpdateRequest(10));
 
         // then
         assertThat(changedOrderTable.getNumberOfGuests()).isEqualTo(10);
@@ -96,22 +102,22 @@ class TableServiceTest {
     @Test
     void 변경할_게스트_인원이_음수면_인원_수_변경_요청_시_예외_발생() {
         // given
-        OrderTable orderTable = tableService.create(new OrderTable(3, false));
+        OrderTable orderTable = tableService.create(new TableCreateRequest(3, false));
 
         // when, then
         assertThatThrownBy(() -> tableService.changeNumberOfGuests(orderTable.getId(),
-                new OrderTable(-1, orderTable.isEmpty())))
+                new TableGuestUpdateRequest(-1)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     void 주문_테이블의_상태가_빈_상태면_게스트_인원_수_변경_요청_시_예외_발생() {
         // given
-        OrderTable orderTable = tableService.create(new OrderTable(3, true));
+        OrderTable orderTable = tableService.create(new TableCreateRequest(3, true));
 
         // when, then
         assertThatThrownBy(() -> tableService.changeNumberOfGuests(orderTable.getId(),
-                new OrderTable(1, orderTable.isEmpty())))
+                new TableGuestUpdateRequest(-1)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 }
